src/test/deca/syntax/valid/provided/hello.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2023
//
{
        println("Hello");
}
