src/test/deca/syntax/invalid/provided/simple_lex.deca
// Description:
//    tests de programme lexicalement correct.
//
// Resultats:
//    Ligne 12 : Erreur de syntaxe
//    no viable alternative at input 'idf'
//
// Historique:
//    cree le 01/01/2023
//
idf _autre_idf
{
}
(
)
// un commentaire.
